# Playback_History_-foo_previous-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Structure.txt
sdk/foobar2000/SDK/: playlist.h
sdk/foobar2000/SDK/Debug/foobar2000_SDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog
sdk/foobar2000/SDK/foobar2000_SDK/Release/foobar2000_SDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog  foobar2000_SDK.lastbuildstate
sdk/foobar2000/SDK/foobar2000_SDK/x64/Release/foobar2000_SDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  foobar2000_SDK.lastbuildstate
sdk/foobar2000/SDK/x64/Debug/foobar2000_SDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  foobar2000_SDK.lastbuildstate
sdk/foobar2000/foobar2000_component_client/x64/Debug/foobar20.71AD2674.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
sdk/foobar2000/helpers/Debug/foobar20.EE47764E.tlog/: foobar2000_sdk_helpers.lastbuildstate
sdk/foobar2000/shared/: shared-Win32.lib  shared.vcxproj
sdk/foobar2000/shared/Release/: shared.dll.recipe  shared.exp  shared.iobj  shared.vcxproj.FileListAbsolute.txt
sdk/foobar2000/shared/Release/shared.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  shared.lastbuildstate
sdk/foobar2000/shared/shared/x64/Release/: shared.dll.recipe  shared.iobj
sdk/foobar2000/shared/shared/x64/Release/shared.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  shared.lastbuildstate
sdk/foobar2000/shared/x64/Release/: shared.exp  shared.lib
sdk/libPPUI/: libPPUI.vcxproj
sdk/pfc/: pfc.vcxproj  pfc.vcxproj.bak  timers.h
sdk/pfc/Debug/pfc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog
sdk/pfc/pfc/Release/pfc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog  pfc.lastbuildstate
sdk/pfc/pfc/x64/Release/pfc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  pfc.lastbuildstate
src/: dllmain.cpp  extension.cpp  history_manager.cpp  history_manager.h  history_panel.cpp  history_panel.h  preferences_page.cpp  preferences_page.h  settings.cpp  settings.h  stdafx.cpp  stdafx.h
